[workspace]
members = [ 
    "bitcoin-top", 
    "bitcoin-imports", 
    "bitcoin-cfg", 
    "bitcoin-addrman", 
    "bitcoin-amt", 
    "bitcoin-argsman", 
    "bitcoin-banman", 
    "bitcoin-bench", 
    "bitcoin-block", 
    "bitcoin-compat", 
    "bitcoin-chain-consensus", 
    "bitcoin-crc32c", 
    "bitcoin-cuckoo-cache", 
    "bitcoin-derive", 
    "bitcoin-epoch", 
    "bitcoin-fees", 
    "bitcoin-fuzz", 
    "bitcoin-golombrice", 
    "bitcoin-hash", 
    "bitcoin-index", 
    "bitcoin-init", 
    "bitcoin-ipc", 
    "bitcoin-leveldb", 
    "bitcoin-log", 
    "bitcoin-miner", 
    "bitcoin-net", 
    #"bitcoin-qt", 
    "bitcoin-random", 
    "bitcoin-scripting", 
    "bitcoin-secp256k1", 
    "bitcoin-serialize", 
    "bitcoin-service-flags", 
    "bitcoin-settings", 
    "bitcoin-string", 
    "bitcoin-support", 
    "bitcoin-test", 
    "bitcoin-txmempool", 
    "bitcoin-univalue", 
    "bitcoin-version", 
    "bitcoin-net-zmq", 
    "bitcoin-sync", 
    "bitcoin-bloom", 
    "bitcoin-connman", 
    "bitcoin-scheduler", 
    "bitcoin-peerman", 
    "bitcoin-db", 
    "bitcoin-daemon", 
    "bitcoin-bech32m", 
    "bitcoin-base58", 
    "bitcoin-blockfilter", 
    "bitcoin-http", 
    "bitcoin-psbt", 
    "bitcoin-compressor", 
    "bitcoin-pow", 
    "bitcoin-indirectmap", 
    "bitcoin-client-ui", 
    "bitcoin-signingprovider", 
    "bitcoin-merkle", 
    "bitcoin-tor", 
    "bitcoin-cli", 
    "bitcoin-time", 
    "bitcoin-remote", 
    "bitcoin-blockman", 
    "bitcoin-validation", 
    "bitcoin-coinsview", 
    "bitcoin-tx", 
    "bitcoin-mem", 
    "bitcoinleveldb-test", 
    "bitcoinleveldb-bench", 
    "bitcoinleveldb-db", 
    "bitcoinleveldb-memtable", 
    "bitcoinleveldb-snapshot", 
    "bitcoinleveldb-repair", 
    "bitcoinleveldb-skiplist", 
    "bitcoinleveldb-meta", 
    "bitcoinleveldb-batch", 
    "bitcoinleveldb-log", 
    "bitcoinleveldb-compat", 
    "bitcoinleveldb-table", 
    "bitcoinleveldb-filter", 
    "bitcoinleveldb-merger", 
    "bitcoinleveldb-duplex", 
    "bitcoinleveldb-arena", 
    "bitcoinleveldb-bloom", 
    "bitcoinleveldb-cache", 
    "bitcoinleveldb-coding", 
    "bitcoinleveldb-comparator", 
    "bitcoinleveldb-crc32", 
    "bitcoinleveldb-dumpfile", 
    "bitcoinleveldb-env", 
    "bitcoinleveldb-limiter", 
    "bitcoinleveldb-posix", 
    "bitcoinleveldb-hash", 
    "bitcoinleveldb-histogram", 
    "bitcoinleveldb-lru", 
    "bitcoinleveldb-file", 
    "bitcoinleveldb-memenv", 
    "bitcoinleveldb-sync", 
    "bitcoinleveldb-options", 
    "bitcoinleveldb-rand", 
    "bitcoinleveldb-slice", 
    "bitcoinleveldb-status", 
    "bitcoinleveldb-util", 
    "bitcoinleveldb-key", 
    "bitcoinleveldb-versionedit", 
    "bitcoinleveldb-version", 
    "bitcoinleveldb-cfg", 
    "bitcoin-dumpwallet", 
    "bitcoin-dummywallet", 
    "bitcoin-walletdb", 
    "bitcoin-crypter", 
    "bitcoin-coinselect", 
    "bitcoin-bdb", 
    "bitcoinrpc-blockchain", 
    "bitcoin-coincontrol", 
    "bitcoinwallet-fees", 
    "bitcoinwallet-init", 
    "bitcoinwallet-interface", 
    "bitcoinchain-interface", 
    "bitcoinrpc-mining", 
    "bitcoinrpc-misc", 
    "bitcoinrpc-net", 
    "bitcoinrpc-txn", 
    "bitcoinwallet-receive", 
    "bitcoinrpc-dump", 
    "bitcoinrpc-wallet", 
    "bitcoinwallet-salvage", 
    "bitcoinrpc-server", 
    "bitcoinwallet-spend", 
    "bitcoin-sqlite", 
    "bitcoinrpc-util", 
    "bitcoin-key", 
    "bitcoinsecp256k1-bench", 
    "bitcoinsecp256k1-scalar", 
    "bitcoinsecp256k1-group", 
    "bitcoinsecp256k1-field", 
    "bitcoinsecp256k1-parse", 
    "bitcoinsecp256k1-ec", 
    "bitcoinsecp256k1-keys", 
    "bitcoinsecp256k1-modinv", 
    "bitcoinsecp256k1-recovery", 
    "bitcoinsecp256k1-schnorr", 
    "bitcoinsecp256k1-scratch", 
    "bitcoin-sam", 
    "bitcoinnode-stats", 
    "bitcoin-network", 
    "bitcoin-proxy", 
    "bitcoin-addr", 
    "bitcoin-blockencoding", 
    "bitcoin-sock", 
    "bitcoin-netpermissions", 
    "bitcoin-service", 
    "bitcoin-subnet", 
    "bitcoin-netmsg", 
    "bitcoin-dns", 
    "bitcoin-indexed-chain", 
    "bitcoin-blockpolicy", 
    "bitcoin-mainsignals", 
    "bitcoin-packages", 
    "bitcoin-policy", 
    "bitcoin-rbf", 
    "bitcoin-aes", 
    "bitcoin-chacha", 
    "bitcoin-muhash", 
    "bitcoin-poly1305", 
    "bitcoin-ripemd", 
    "bitcoin-sha1", 
    "bitcoin-sha256", 
    "bitcoin-sha3", 
    "bitcoin-sha512", 
    "bitcoin-siphash", 
    "bitcoin-txmempoolentry", 
    "bitcoinchain-params", 
    "bitcoin-foundblock", 
    "bitcoinwallet-feature", 
    "bitcoin-chainman", 
    "bitcoinwallet-library", 
    "bitcoin-hdchain", 
    "bitcoinwallet-client", 
    "bitcoinwallet-context", 
    "bitcoinchain-client", 
    "bitcoinchain-notifications", 
    "bitcoinnode-interface", 
    "bitcoinnode-txrelay", 
    "bitcoin-portmap", 
    "bitcoin-deployment", 
    "bitcoin-checkqueue", 
    "bitcoin-asmap", 
    "bitcoin-message", 
    "bitcoin-noui", 
    "bitcoin-restapi", 
    "bitcoin-signet", 
    "bitcoin-system", 
    "bitcoin-tokenpipe", 
    "bitcoin-scriptpubkeyman", 
    "bitcoin-u256", 
    "bitcoin-bitstream", 
    "bitcoin-bigint", 
    "bitcoin-u160", 
    "bitcoin-blob", 
    "bitcoin-autofile", 
    "bitcoin-bufferedfile", 
    "bitcoin-vectorstream", 
    "bitcoin-locked-pool", 
    "bitcoin-locked-page-allocator", 
    "bitcoin-arena", 
    "bitcoin-syscall", 
    "bitcoin-get-json-token", 
    "bitcoin-sha256-sse4", 
    "bitcoin-sha256-sse41", 
    "bitcoin-sha256d", 
    "bitcoin-sha256-shani", 
    "bitcoin-sha256-avx2", 
    "bitcoin-sha256-hkdf", 
    "bitcoin-hmac-sha512", 
    "bitcoin-hmac-sha256"
, "bitcoin-tx-confirm-stats", "bitcoinleveldb-logwriter", "bitcoinleveldb-logreader", "bitcoinleveldb-posixlogger", "bitcoinleveldb-logtools", "bitcoinleveldb-versionset", "bitcoinleveldb-compaction", "bitcoinleveldb-posixenv", "bitcoinleveldb-posixwfile", "bitcoinleveldb-posixseqfile", "bitcoinleveldb-posixrafile", "bitcoinleveldb-posixmmaprfile", "bitcoinleveldb-posixtools"]

[workspace.dependencies]
#qmetaobject            = "0.2.7"
#qt_core                = "0.5.0"
#qt_gui                 = "0.5.0"
atomic                  = "0.5.1"
atomic-take             = "1.0.0"
atomic_float            = "0.1.0"
bincode                 = { version = "2.0.1", features = ["serde"] }
bitflags                = "1.3.2"
bitset                  = "0.1.2"
comparator              = "0.3.0"
const-default           = "1.0.0"
crossbeam               = "0.8.1"
delegate                = "0.7.0"
derivative              = "2.2.0"
errno                   = "0.2.8"
tempfile                = "*"
disable_macro                = "*"
float-ord               = "0.3.2"
fs2                     = "0.4.3"
hashbrown               = "0.12.1"
indoc                   = "1.0.6"
integer-encoding        = "3.0.4"
lazy_static             = "1.4.0"
libc                    = "0.2.126"
libc-stdhandle          = "0.1.0"
libevent                = { version = "0.1.0", git = "https://github.com/klebs6/libevent-rs", branch = "patch-1" }
libevent-sys            = { version = "0.2.5", git = "https://github.com/klebs6/libevent-rs", branch = "patch-1" }
#libevent                = { version = "0.1.0" }
#libevent-sys            = { version = "0.3.0" }
lock_api                = "0.4.7"
maplit                  = "1.0.2"
modular-bitfield        = "0.11.2"
modular-bitfield-impl   = "0.11.2"
multimap                = "0.8.3"
multiset                = "0.0.5"
nix                     = "0.24.1"
num                     = "0.4.0"
once_cell               = "1.21.3"
parking_lot             = "0.12.1"
phf                     = { version = "0.10",    features   = [ "macros" ]  }
pnet_sys                = "0.31.0"
priority-queue          = "1.2.2"
quanta                  = "0.9.3"
rand                    = "0.8.5"
same-file               = "1.0.6"
scan-crate-for-typedefs = "0.6.0"
serde                   = { version = "1.0.152", features   = [ "derive", "serde_derive", "rc" ]  }
serde-big-array         = "0.4.1"
serde_test              = "1.0.177"
serde_json              = "*"
shared-mutex            = "0.3.1"
socket2                 = "0.4.4"
sqlite                  = "0.25.3"
sqlite3                 = "0.24.0"
static_assertions       = "1.1.0"
thiserror               = "1.0.31"
time                    = { version = "0.3.9",   features   = [ "std", "rand", "serde" ]  }
time-point              = "0.1.1"
tinyvec                 = { version = "1.5.1",   features   = [ "alloc", "rustc_1_55", "serde" ]  }
traced-test             = "1.0.4"
tracing                 = { version = "0.1.41", features = ["log"] }
tracing-setup           = "1.0.4"
tracing-subscriber      = { version = "0.3.19", default-features = false, features = ["fmt", "std", "env-filter", "json"] }
try-catch               = "0.2.2"
usdt                    = "0.5.0"
usdt-impl               = "0.5.0"
winapi                  = "0.2.8"
chrono                  = "0.4.41"
derive_builder          = "0.20.2"
getset                  = "0.1.5"
serial_test             = "0.5.1"
num-traits              = "0.1.43"
num-bigint              = "0.4.6"
sha1                    = "0.10.6"
sha256                  = "1.6.0"
hex                     = "0.4.3"
zeroize                 = "1.8.1"
#poly1305                = "*"
hex-literal             = "1.0.0"
rand_chacha             = "0.3.1"
generic-array           = "0.14.7"
rand_core               = "0.9.3"
proptest                = "1.7.0"
zerocopy                = "0.7.35"
paste                   = "1.0.15"
ryu                     = "1.0.20"
criterion               = "0.6.0"
export-magic            = "*"
snap                    = "*"
named-item              = "*"

igd    = { version = "0.12.1" } # UPnP / IGD protocol
natpmp = { version = "0.5.0" } # NAT‑PMP protocol
