[workspace]
members = [ 
    #"bitcoin-qt", 
    "bitcoin-addr", 
    "bitcoin-addrman", 
    "bitcoin-aes", 
    "bitcoin-amt", 
    "bitcoin-arena", 
    "bitcoin-argsman", 
    "bitcoin-asmap", 
    "bitcoin-autofile", 
    "bitcoin-banman", 
    "bitcoin-base58", 
    "bitcoin-bdb", 
    "bitcoin-bech32m", 
    "bitcoin-bench", 
    "bitcoin-bigint", 
    "bitcoin-bitstream", 
    "bitcoin-blob", 
    "bitcoin-block", 
    "bitcoin-blockencoding", 
    "bitcoin-blockfilter", 
    "bitcoin-blockman", 
    "bitcoin-blockpolicy", 
    "bitcoin-bloom", 
    "bitcoin-bufferedfile", 
    "bitcoin-cfg", 
    "bitcoin-chacha", 
    "bitcoin-chain-consensus", 
    "bitcoin-chainman", 
    "bitcoin-checkqueue", 
    "bitcoin-cli", 
    "bitcoin-client-ui", 
    "bitcoin-coincontrol", 
    "bitcoin-coinselect", 
    "bitcoin-coinsview", 
    "bitcoin-compat", 
    "bitcoin-compressor", 
    "bitcoin-connman", 
    "bitcoin-crc32c", 
    "bitcoin-crypter", 
    "bitcoin-cuckoo-cache", 
    "bitcoin-daemon", 
    "bitcoin-db", 
    "bitcoin-deployment", 
    "bitcoin-derive", 
    "bitcoin-dns", 
    "bitcoin-dummywallet", 
    "bitcoin-dumpwallet", 
    "bitcoin-epoch", 
    "bitcoin-fees", 
    "bitcoin-foundblock", 
    "bitcoin-fuzz", 
    "bitcoin-get-json-token", 
    "bitcoin-golombrice", 
    "bitcoin-hash", 
    "bitcoin-hdchain", 
    "bitcoin-hmac-sha256", 
    "bitcoin-hmac-sha512", 
    "bitcoin-http", 
    "bitcoin-imports", 
    "bitcoin-index", 
    "bitcoin-indexed-chain", 
    "bitcoin-indirectmap", 
    "bitcoin-init", 
    "bitcoin-ipc", 
    "bitcoin-key", 
    "bitcoin-leveldb", 
    "bitcoin-locked-page-allocator", 
    "bitcoin-locked-pool", 
    "bitcoin-log", 
    "bitcoin-mainsignals", 
    "bitcoin-mem", 
    "bitcoin-merkle", 
    "bitcoin-message", 
    "bitcoin-miner", 
    "bitcoin-muhash", 
    "bitcoin-net", 
    "bitcoin-net-zmq", 
    "bitcoin-netmsg", 
    "bitcoin-netpermissions", 
    "bitcoin-network", 
    "bitcoin-noui", 
    "bitcoin-packages", 
    "bitcoin-peerman", 
    "bitcoin-policy", 
    "bitcoin-poly1305", 
    "bitcoin-portmap", 
    "bitcoin-pow", 
    "bitcoin-proxy", 
    "bitcoin-psbt", 
    "bitcoin-random", 
    "bitcoin-rbf", 
    "bitcoin-remote", 
    "bitcoin-restapi", 
    "bitcoin-ripemd", 
    "bitcoin-sam", 
    "bitcoin-scheduler", 
    "bitcoin-scripting", 
    "bitcoin-scriptpubkeyman", 
    "bitcoin-secp256k1", 
    "bitcoin-serialize", 
    "bitcoin-service", 
    "bitcoin-service-flags", 
    "bitcoin-settings", 
    "bitcoin-sha1", 
    "bitcoin-sha256", 
    "bitcoin-sha256-avx2", 
    "bitcoin-sha256-hkdf", 
    "bitcoin-sha256-shani", 
    "bitcoin-sha256-sse4", 
    "bitcoin-sha256-sse41", 
    "bitcoin-sha256d", 
    "bitcoin-sha3", 
    "bitcoin-sha512", 
    "bitcoin-signet", 
    "bitcoin-signingprovider", 
    "bitcoin-siphash", 
    "bitcoin-sock", 
    "bitcoin-sqlite", 
    "bitcoin-string", 
    "bitcoin-subnet", 
    "bitcoin-support", 
    "bitcoin-sync", 
    "bitcoin-syscall", 
    "bitcoin-system", 
    "bitcoin-test", 
    "bitcoin-time", 
    "bitcoin-tokenpipe", 
    "bitcoin-top", 
    "bitcoin-tor", 
    "bitcoin-tx", 
    "bitcoin-tx-confirm-stats", 
    "bitcoin-txmempool", 
    "bitcoin-txmempoolentry", 
    "bitcoin-u160", 
    "bitcoin-u256", 
    "bitcoin-univalue", 
    "bitcoin-validation", 
    "bitcoin-vectorstream", 
    "bitcoin-version", 
    "bitcoin-walletdb", 
    "bitcoinchain-client", 
    "bitcoinchain-interface", 
    "bitcoinchain-notifications", 
    "bitcoinchain-params", 
    "bitcoinleveldb-arena", 
    "bitcoinleveldb-batch", 
    "bitcoinleveldb-bench", 
    "bitcoinleveldb-block", 
    "bitcoinleveldb-blockbuilder", 
    "bitcoinleveldb-blockconstructor", 
    "bitcoinleveldb-blockcontents", 
    "bitcoinleveldb-blockhandle", 
    "bitcoinleveldb-blockiter", 
    "bitcoinleveldb-blockutil", 
    "bitcoinleveldb-bloom", 
    "bitcoinleveldb-cache", 
    "bitcoinleveldb-cfg", 
    "bitcoinleveldb-coding", 
    "bitcoinleveldb-compaction", 
    "bitcoinleveldb-compactionstats", 
    "bitcoinleveldb-comparator", 
    "bitcoinleveldb-compat", 
    "bitcoinleveldb-crc32", 
    "bitcoinleveldb-db", 
    "bitcoinleveldb-dbconstructor", 
    "bitcoinleveldb-dbimpl", 
    "bitcoinleveldb-dbimplinner", 
    "bitcoinleveldb-dbimplwriter", 
    "bitcoinleveldb-dbinterface", 
    "bitcoinleveldb-dbiter", 
    "bitcoinleveldb-dbiterstate",
    "bitcoinleveldb-dbtest", 
    "bitcoinleveldb-dumpfile", 
    "bitcoinleveldb-duplex", 
    "bitcoinleveldb-emptyiterator", 
    "bitcoinleveldb-env", 
    "bitcoinleveldb-erroriterator", 
    "bitcoinleveldb-file", 
    "bitcoinleveldb-filter", 
    "bitcoinleveldb-footer", 
    "bitcoinleveldb-harness", 
    "bitcoinleveldb-hash", 
    "bitcoinleveldb-histogram", 
    "bitcoinleveldb-iterator", 
    "bitcoinleveldb-iteratorinner", 
    "bitcoinleveldb-key", 
    "bitcoinleveldb-keyconvertingiterator", 
    "bitcoinleveldb-limiter", 
    "bitcoinleveldb-log", 
    "bitcoinleveldb-logreader", 
    "bitcoinleveldb-logtools", 
    "bitcoinleveldb-logwriter", 
    "bitcoinleveldb-lru", 
    "bitcoinleveldb-memenv", 
    "bitcoinleveldb-memtable", 
    "bitcoinleveldb-merger", 
    "bitcoinleveldb-modeldb", 
    "bitcoinleveldb-options", 
    "bitcoinleveldb-posix", 
    "bitcoinleveldb-posixenv", 
    "bitcoinleveldb-posixlogger", 
    "bitcoinleveldb-posixmmaprfile", 
    "bitcoinleveldb-posixrafile", 
    "bitcoinleveldb-posixseqfile", 
    "bitcoinleveldb-posixtools", 
    "bitcoinleveldb-posixwfile", 
    "bitcoinleveldb-rand", 
    "bitcoinleveldb-repair", 
    "bitcoinleveldb-reversekeycomparator", 
    "bitcoinleveldb-skiplist", 
    "bitcoinleveldb-slice", 
    "bitcoinleveldb-snapshot", 
    "bitcoinleveldb-specialenv", 
    "bitcoinleveldb-status", 
    "bitcoinleveldb-stringsink", 
    "bitcoinleveldb-stringsource", 
    "bitcoinleveldb-sync", 
    "bitcoinleveldb-table", 
    "bitcoinleveldb-tablebuilder", 
    "bitcoinleveldb-tablecache", 
    "bitcoinleveldb-tableconstructor", 
    "bitcoinleveldb-tablerep", 
    "bitcoinleveldb-test", 
    "bitcoinleveldb-testenv", 
    "bitcoinleveldb-util", 
    "bitcoinleveldb-version", 
    "bitcoinleveldb-versionedit", 
    "bitcoinleveldb-versioniterator", 
    "bitcoinleveldb-versionset", 
    "bitcoinleveldb-writebatch", 
    "bitcoinleveldb-writeoptions", 
    "bitcoinnode-interface", 
    "bitcoinnode-stats", 
    "bitcoinnode-txrelay", 
    "bitcoinrpc-blockchain", 
    "bitcoinrpc-dump", 
    "bitcoinrpc-mining", 
    "bitcoinrpc-misc", 
    "bitcoinrpc-net", 
    "bitcoinrpc-server", 
    "bitcoinrpc-txn", 
    "bitcoinrpc-util", 
    "bitcoinrpc-wallet", 
    "bitcoinsecp256k1-bench", 
    "bitcoinsecp256k1-ec", 
    "bitcoinsecp256k1-field", 
    "bitcoinsecp256k1-group", 
    "bitcoinsecp256k1-keys", 
    "bitcoinsecp256k1-modinv", 
    "bitcoinsecp256k1-parse", 
    "bitcoinsecp256k1-recovery", 
    "bitcoinsecp256k1-scalar", 
    "bitcoinsecp256k1-schnorr", 
    "bitcoinsecp256k1-scratch", 
    "bitcoinwallet-client", 
    "bitcoinwallet-context", 
    "bitcoinwallet-feature", 
    "bitcoinwallet-fees", 
    "bitcoinwallet-init", 
    "bitcoinwallet-interface", 
    "bitcoinwallet-library", 
    "bitcoinwallet-receive", 
    "bitcoinwallet-salvage", 
    "bitcoinwallet-spend"
]

[workspace.dependencies]
#qmetaobject            = "0.2.7"
#qt_core                = "0.5.0"
#qt_gui                 = "0.5.0"
atomic                  = "0.5.1"
atomic-take             = "1.0.0"
atomic_float            = "0.1.0"
bincode                 = { version = "2.0.1", features = ["serde"] }
bitflags                = "1.3.2"
bitset                  = "0.1.2"
comparator              = "0.3.0"
const-default           = "1.0.0"
crossbeam               = "0.8.1"
delegate                = "0.7.0"
derivative              = "2.2.0"
errno                   = "0.2.8"
tempfile                = "3.20.0"
disable_macro                = "0.3.6"
float-ord               = "0.3.2"
fs2                     = "0.4.3"
hashbrown               = "0.12.1"
indoc                   = "1.0.6"
integer-encoding        = "3.0.4"
lazy_static             = "1.4.0"
libc                    = "0.2.126"
libc-stdhandle          = "0.1.0"
libevent                = { version = "0.1.0", git = "https://github.com/klebs6/libevent-rs", branch = "patch-1" }
libevent-sys            = { version = "0.2.5", git = "https://github.com/klebs6/libevent-rs", branch = "patch-1" }
#libevent                = { version = "0.1.0" }
#libevent-sys            = { version = "0.3.0" }
lock_api                = "0.4.7"
maplit                  = "1.0.2"
modular-bitfield        = "0.11.2"
modular-bitfield-impl   = "0.11.2"
multimap                = "0.8.3"
multiset                = "0.0.5"
nix                     = "0.24.1"
num                     = "0.4.0"
once_cell               = "1.21.3"
parking_lot             = "0.12.1"
phf                     = { version = "0.10",    features   = [ "macros" ]  }
pnet_sys                = "0.31.0"
priority-queue          = "1.2.2"
quanta                  = "0.9.3"
rand                    = "0.8.5"
same-file               = "1.0.6"
scan-crate-for-typedefs = "0.6.0"
serde                   = { version = "1.0.152", features   = [ "derive", "serde_derive", "rc" ]  }
serde-big-array         = "0.4.1"
serde_test              = "1.0.177"
serde_json              = "1.0.140"
shared-mutex            = "0.3.1"
socket2                 = "0.4.4"
sqlite                  = "0.25.3"
sqlite3                 = "0.24.0"
static_assertions       = "1.1.0"
thiserror               = "1.0.31"
time                    = { version = "0.3.9",   features   = [ "std", "rand", "serde" ]  }
time-point              = "0.1.1"
tinyvec                 = { version = "1.5.1",   features   = [ "alloc", "rustc_1_55", "serde" ]  }
traced-test             = "1.0.4"
tracing                 = { version = "0.1.41", features = ["log"] }
tracing-setup           = "1.0.4"
tracing-subscriber      = { version = "0.3.19", default-features = false, features = ["fmt", "std", "env-filter", "json"] }
try-catch               = "0.2.2"
usdt                    = "0.5.0"
usdt-impl               = "0.5.0"
winapi                  = "0.2.8"
chrono                  = "0.4.41"
derive_builder          = "0.20.2"
getset                  = "0.1.5"
serial_test             = "0.5.1"
num-traits              = "0.1.43"
num-bigint              = "0.4.6"
sha1                    = "0.10.6"
sha256                  = "1.6.0"
hex                     = "0.4.3"
zeroize                 = "1.8.1"
#poly1305                = "*"
hex-literal             = "1.0.0"
rand_chacha             = "0.3.1"
generic-array           = "0.14.7"
rand_core               = "0.9.3"
proptest                = "1.7.0"
zerocopy                = "0.7.35"
paste                   = "1.0.15"
ryu                     = "1.0.20"
criterion               = "0.6.0"
export-magic            = "0.3.6"
snap                    = "1.1.1"
named-item              = "0.6.0"

igd    = { version = "0.12.1" } # UPnP / IGD protocol
natpmp = { version = "0.5.0" } # NAT‑PMP protocol
