[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.18"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.18"

[dependencies.bitcoin-support]
path = "../bitcoin-support"
version = "0.1.18"

[dependencies.derive_builder]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
categories = [
    "memory-management",
    "data-structures",
    "compilers",
    "development-tools",
]
description = "Efficient arena-based memory management crate for high-performance Rust applications, facilitating customized memory allocations."
edition = "2024"
keywords = [
    "arena",
    "memory",
    "allocation",
    "performance",
    "custom",
]
license = "MIT"
name = "bitcoin-arena"
version = "0.1.2"
