[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-support]
path = "../bitcoin-support"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
categories = ["memory-management", "data-structures", "development-tools"]
description = "A high-performance arena allocator crate providing efficient memory management with minimal fragmentation for predictable allocation patterns."
edition = "2024"
keywords = ["arena", "allocator", "memory", "performance", "fragmentation"]
license = "MIT"
name = "bitcoin-arena"
version = "0.1.3"
