[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-support]
path = "../bitcoin-support"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
categories = ["memory-management", "algorithms", "cryptography", "science"]
description = "Low-level best-fit arena allocator over caller-supplied memory, with coalescing free lists, allocation statistics, and pointer-based interfaces suitable for high-performance Bitcoin and blockchain infrastructure."
edition = "2024"
keywords = ["arenaallocator", "memorypool", "bitcoin", "blockchain", "allocator"]
license = "MIT"
name = "bitcoin-arena"
version = "0.1.3"
