[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.ryu]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.zerocopy]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
categories = [
    "cryptography",
    "parsing",
    "finance",
    "algorithms",
]
description = "A comprehensive Rust library for parsing and tokenizing JSON data, optimized for Bitcoin applications."
edition = "2024"
keywords = [
    "json",
    "bitcoin",
    "tokenization",
    "parsing",
    "cryptocurrency",
]
license = "MIT"
name = "bitcoin-get-json-token"
version = "0.1.1"
