[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.ryu]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.zerocopy]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
categories = ["algorithms", "parsing", "data-structures", "cryptography", "network-programming"]
description = "Efficient JSON token parsing and manipulation for Bitcoin-related applications, supporting standard JSON structures and hexadecimal conversions."
edition = "2024"
keywords = ["json", "bitcoin", "parsing", "token", "hexadecimal"]
license = "MIT"
name = "bitcoin-get-json-token"
version = "0.1.1"
