[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.ryu]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.zerocopy]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
categories = ["parsing", "parser-implementations", "algorithms", "network-programming", "development-tools"]
description = "Low-level, Bitcoin-inspired JSON lexer/tokeniser for strict RFC-compliant number, string, and structural token parsing over raw byte buffers, with tracing instrumentation and minimal allocations."
edition = "2024"
keywords = ["json", "lexer", "bitcoin", "parsing", "tokenizer"]
license = "MIT"
name = "bitcoin-get-json-token"
version = "0.1.1"
