[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-sha256]
path = "../bitcoin-sha256"
version = "0.1.20"

[dependencies.bitcoin-u256]
path = "../bitcoin-u256"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[dependencies.getset]
workspace = true

[dependencies.hex-literal]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tracing]
workspace = true

[dev-dependencies]
hex = "0.4"
hmac = "0.12"
proptest = "1"
sha2 = "0.10"

[package]
authors = ["YourName <you@example.com>"]
description = "Low-level, allocation-free HMAC-SHA-256 and RFC6979 deterministic nonce generator with FFI-friendly APIs, tailored for Bitcoin-style cryptography."
edition = "2024"
license = "MIT"
name = "bitcoin-hmac-sha256"
version = "0.1.2"
keywords = ["hmac", "sha256", "rfc6979", "bitcoin", "ecdsa"]
categories = ["cryptography", "algorithms", "network-programming", "finance", "no-std"]
