[dependencies.bitcoin-imports]
path = "../bitcoin-imports"

[dependencies.bitcoin-sha512]
path = "../bitcoin-sha512"

[dependencies.getset]
workspace = true

[dependencies.hex-literal]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tracing]
workspace = true

[dev-dependencies]
hex = "0.4"
hmac = "0.12"
proptest = "1"
sha2 = "0.10"

[package]
authors = ["YourName <you@example.com>"]
description = "todo: write a description here"
edition = "2024"
license = "MIT"
name = "bitcoin-hmac-sha512"
version = "0.1.1"
