[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-sha512]
path = "../bitcoin-sha512"
version = "0.1.19"

[dependencies.getset]
workspace = true

[dependencies.hex-literal]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tracing]
workspace = true

[dev-dependencies]
hex = "0.4"
hmac = "0.12"
proptest = "1"
sha2 = "0.10"

[package]
authors = ["YourName <you@example.com>"]
description = "Low-level, FFI-friendly HMAC-SHA-512 implementation for Bitcoin-style cryptographic workflows, using raw pointers and fixed-size buffers for high-performance message authentication."
edition = "2024"
license = "MIT"
name = "bitcoin-hmac-sha512"
version = "0.1.1"
keywords = ["hmac", "sha512", "bitcoin", "cryptography", "ffi"]
categories = ["cryptography", "algorithms", "science"]
