[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-support]
path = "../bitcoin-support"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
categories = ["memory-management", "os", "cryptography", "development-tools", "data-structures"]
description = "OS-dependent allocation and deallocation of locked/pinned memory pages for enhanced security and memory management."
edition = "2024"
keywords = ["memory", "allocation", "locked", "security", "osspecific"]
license = "MIT"
name = "bitcoin-locked-page-allocator"
version = "0.1.19"
