[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-support]
path = "../bitcoin-support"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
categories = ["cryptography", "os", "memory-management", "network-programming", "development-tools"]
description = "OS-specific allocation and deallocation of locked (non-pageable) memory pages for securely storing sensitive data, with Windows and POSIX backends, page-aligned sizing, memory cleansing, and exposure of mlock-style limits."
edition = "2024"
keywords = ["bitcoin", "mlock", "securememory", "keymanagement", "allocator"]
license = "MIT"
name = "bitcoin-locked-page-allocator"
version = "0.1.19"
