[dependencies.bitcoin-arena]
path = "../bitcoin-arena"
version = "0.1.3"

[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-locked-page-allocator]
path = "../bitcoin-locked-page-allocator"
version = "0.1.19"

[dependencies.bitcoin-support]
path = "../bitcoin-support"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
categories = ["cryptography", "memory-management", "embedded", "science"]
description = "A Rust crate for managing locked memory pools, preventing sensitive data like Bitcoin security keys from being swapped to disk."
edition = "2024"
keywords = ["bitcoin", "memorymanagement", "lockedmemory", "security", "allocator"]
license = "MIT"
name = "bitcoin-locked-pool"
version = "0.1.3"
