[dependencies.bitcoin-arena]
path = "../bitcoin-arena"
version = "0.1.3"

[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-locked-page-allocator]
path = "../bitcoin-locked-page-allocator"
version = "0.1.19"

[dependencies.bitcoin-support]
path = "../bitcoin-support"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
categories = ["cryptography", "memory-management", "concurrency", "science"]
description = "Arena-based, page-locked memory pool and singleton manager for cryptographic secrets, modeled after Bitcoin Core’s secure allocator and backed by pluggable OS-specific locked-page allocators."
edition = "2024"
keywords = ["bitcoin", "lockedmemory", "secureallocation", "crypto", "keymanagement"]
license = "MIT"
name = "bitcoin-locked-pool"
version = "0.1.3"
