[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-u256]
path = "../bitcoin-u256"
version = "0.1.19"

[package]
authors = ["YourName <you@example.com>"]
description = "Provides a HKDF implementation using HMAC-SHA256 with a fixed output length of 32 bytes, following RFC 5869."
edition = "2024"
license = "MIT"
name = "bitcoin-sha256-hkdf"
version = "0.1.1"
keywords = ["bitcoin", "cryptography", "sha256", "hkdf", "security"]
categories = ["cryptography", "algorithms", "finance"]
