[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-u256]
path = "../bitcoin-u256"
version = "0.1.19"

[package]
authors = ["YourName <you@example.com>"]
description = "RFC 5869 HKDF implementation specialized for HMAC-SHA256 with a fixed 32-byte output, designed for Bitcoin-style key derivation workflows."
edition = "2024"
license = "MIT"
name = "bitcoin-sha256-hkdf"
version = "0.1.1"
keywords = ["hkdf", "hmacsha256", "keyderivation", "bitcoin", "cryptography"]
categories = ["cryptography", "mathematics", "algorithms", "development-tools", "science"]
