[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-u256]
path = "../bitcoin-u256"
version = "0.1.19"

[package]
authors = ["YourName <you@example.com>"]
description = "todo: write a description here"
edition = "2024"
license = "MIT"
name = "bitcoin-sha256-sse41"
version = "0.1.1"
