[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-u256]
path = "../bitcoin-u256"
version = "0.1.19"

[package]
authors = ["YourName <you@example.com>"]
description = "A Rust crate optimized for calculating SHA256d using SSE4.1 instructions for 4-way parallel processing, tailored for cryptographic applications."
edition = "2024"
license = "MIT"
name = "bitcoin-sha256-sse41"
version = "0.1.1"
keywords = ["sha256", "sse41", "crypto", "performance", "parallel"]
categories = ["cryptography", "algorithms", "concurrency", "network-programming"]
