[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-u256]
path = "../bitcoin-u256"
version = "0.1.19"

[package]
authors = ["YourName <you@example.com>"]
description = "SSE4.1-accelerated 4-way Bitcoin-style double SHA-256 (sha256d) transform on x86-64, exposing low-level SIMD primitives for high-throughput hashing workloads."
edition = "2024"
license = "MIT"
name = "bitcoin-sha256-sse41"
version = "0.1.1"
keywords = ["bitcoin", "sha256", "sse41", "simd", "hashing"]
categories = ["cryptography", "algorithms", "network-programming", "science"]
