[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.18"

[dependencies.derive_builder]
workspace = true

[dependencies.getset]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
edition = "2024"
license = "MIT"
name = "bitcoin-syscall"
version = "0.1.1"
