[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[dependencies.getset]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["klebs6 <tpk3.mx@gmail.com>"]
edition = "2024"
license = "MIT"
name = "bitcoin-syscall"
version = "0.1.2"
description = "Rust port of Bitcoin Core's seccomp-based syscall sandbox: policy-driven syscall allow-listing with per-thread filters, SIGSYS debugging, and Linux x86-64 enforcement, with portable no-op shims elsewhere."
keywords = ["bitcoin", "seccomp", "sandbox", "syscall", "security"]
categories = ["cryptography", "network-programming", "os", "development-tools"]
