[dependencies.bitcoin-autofile]
path = "../bitcoin-autofile"
version = "0.1.20"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-serialize]
path = "../bitcoin-serialize"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[dependencies.export-magic]
workspace = true

[dependencies.getset]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["YourName <you@example.com>"]
description = "todo: write a description here"
edition = "2024"
license = "MIT"
name = "bitcoin-tx-confirm-stats"
version = "0.1.1"
