[dependencies.bitcoin-autofile]
path = "../bitcoin-autofile"
version = "0.1.20"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-serialize]
path = "../bitcoin-serialize"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[dependencies.export-magic]
workspace = true

[dependencies.getset]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["YourName <you@example.com>"]
description = "Sophisticated toolset for analyzing Bitcoin transaction confirmation statistics, optimizing fee strategies, and estimating transaction confirmation times using historical data."
edition = "2024"
license = "MIT"
name = "bitcoin-tx-confirm-stats"
version = "0.1.1"
keywords = ["bitcoin", "transaction", "confirmation", "feerate", "statistics"]
categories = ["finance", "algorithms", "cryptography", "data-structures", "network-programming"]
